--- a/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
+++ b/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
@@ -12,10 +12,8 @@
     class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
   >
     <h2 class="text-2xl font-bold text-gray-800">145.00 PHP</h2>
-    <p class="text-gray-500 text-sm mt-1">MG Wallet</p>
+    <p class="text-gray-500 text-sm mt-1">NivJenz Wallet</p>
   </div>
-
-
 
   <div
     class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
