--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @use "tailwindcss";
+@use "./styles/table";
 
 @theme {
   // --color-primary: #0a54ff;
