fix sql issues on add geonology

--- a/frontend/src/projects/app/components/register-confirmation/register-confirmation.component.html
+++ b/frontend/src/projects/app/components/register-confirmation/register-confirmation.component.html
@@ -68,12 +68,12 @@
       </h3>
       <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
         <div>
-          <span class="font-lg text-gray-500">Sponsor ID:</span>
-          {{ data().sponsor }}
+          <span class="font-lg text-gray-500">Sponsor:</span>
+          {{ data().sponsor.label }}
         </div>
         <div>
-          <span class="font-lg text-gray-500">Upline ID:</span>
-          {{ data().upline }}
+          <span class="font-lg text-gray-500">Upline:</span>
+          {{ data().upline.label }}
         </div>
         <div>
           <span class="font-lg text-gray-500">Position:</span>
